plugins/xcb/kglobalaccel_x11: use new KKeyServer API

To correctly handle Qt::Key_Calculator corresponding to both
XF86Calculator and XF86Calculater.

BUG: 478936